libs/parser/testdata/fixtures/negative/source_invalid_version.csl
source:
	alias: 'bad-version'
	type: 'custom'
	version: 'not-a-version'
